iconplusTest/k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: devops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: sotar12/frontend:latest
          ports:
            - name: http-frontend        # ✅ beri nama port agar bisa dibaca PodMonitor
              containerPort: 3000
          readinessProbe:                # opsional tapi bagus
            httpGet:
              path: /metrics             # ganti sesuai endpoint metrics kamu
              port: http-frontend
            initialDelaySeconds: 5
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: devops
  labels:
    app: frontend
spec:
  type: NodePort
  selector:
    app: frontend
  ports:
    - name: http-frontend        # ✅ nama port harus sama dengan di Deployment
      port: 3000
      targetPort: http-frontend
      nodePort: 32710
