iconplusTest/k8s/go-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goapi
  namespace: devops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: goapi
  template:
    metadata:
      labels:
        app: goapi
    spec:
      containers:
        - name: goapi
          image: sotar12/go:latest
          ports:
            - name: http-goapi
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /metrics                # ubah sesuai endpoint metrics jika berbeda
              port: http-goapi
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /                       # pastikan GoAPI merespons /
              port: http-goapi
            initialDelaySeconds: 15
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: goapi-service
  namespace: devops
  labels:
    app: goapi
spec:
  type: NodePort
  selector:
    app: goapi
  ports:
    - name: http-goapi
      port: 8080
      targetPort: http-goapi
      nodePort: 32156
