iconplusTest/k8s/laravel-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laravel
  namespace: devops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: laravel
  template:
    metadata:
      labels:
        app: laravel
    spec:
      containers:
        - name: laravel
          image: sotar12/laravel:latest   # ganti dengan image kamu
          ports:
            - containerPort: 8001
---
apiVersion: v1
kind: Service
metadata:
  name: laravel-service
  namespace: devops
spec:
  type: NodePort
  selector:
    app: laravel
  ports:
    - port: 8001
      targetPort: 8001
      nodePort: 31408
