iconplusTest/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/limit-rps: "10"
spec:
  rules:
  - host: frontend.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 3000
  - host: api.local
    http:
      paths:
      - path: /go
        pathType: Prefix
        backend:
          service:
            name: goapi-service
            port:
              number: 8080
      - path: /laravel
        pathType: Prefix
        backend:
          service:
            name: laravel-service
            port:
              number: 8001
